Update and rename Style.css to style.css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("");
+  background-image: url("https://images.pexels.com/photos/8961886/pexels-photo-8961886.jpeg?auto=compress&cs=tinysrgb&w=600");
 }
 
 a:link {
