--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ h1{
   font-family: Arial;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 a:link {
   color: green;
   background-color: transparent;
