--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ body.active { overflow: hidden; }
 \*-----------------------------------*/
 
 .header {
-  position: fixed;
+  position: none;
   top: 0;
   left: 0;
   width: 100%;
