--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  * #video background
 \*-----------------------------------*/
 .vid1 {
-  background: url(https://videos.pexels.com/video-files/7606424/7606424-sd_540_960_30fps.mp4) left top no-repeat, url(https://videos.pexels.com/video-files/7606424/7606424-sd_540_960_30fps.mp4) right bottom no-repeat, url(https://videos.pexels.com/video-files/7606424/7606424-sd_540_960_30fps.mp4) left top repeat;
+  background: url(https://images.pexels.com/photos/8961886/pexels-photo-8961886.jpeg?auto=compress&cs=tinysrgb&w=600) left top no-repeat, url(https://images.pexels.com/photos/8961886/pexels-photo-8961886.jpeg?auto=compress&cs=tinysrgb&w=600) right bottom no-repeat, url(https://images.pexels.com/photos/8961886/pexels-photo-8961886.jpeg?auto=compress&cs=tinysrgb&w=600) left top repeat;
   padding: 15px;
   background-size: 50px, 130px, auto;
 }
