--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 .feedback-container {
 
-    width: 500px;
+    width: 900px;
 
     margin: 0 auto;
 
@@ -31,7 +31,7 @@
 
     border-radius: 5px;
 
-    background-color: #f2f2f2;
+    background-color: #gray;
 
 }
 
@@ -39,7 +39,7 @@
 .feedback-container h1 {
 
     text-align: center;
-
+    color: white;
     margin-bottom: 20px;
 
 }
@@ -48,7 +48,7 @@
 .feedback-container label {
 
     display: block;
-
+    color: white;
     margin-bottom: 5px;
 
 }
